--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "@prisma/client": "^6.11.0",
     "dotenv": "^16.6.1",
     "fastify": "^5.4.0",
